add winning text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
       <div class="row mb-3">
         <div class="col">
           <a href="/tic/new" class="btn btn-success">New Game</a>
+          <% if (isWin) { %>
+            <div class="mt-1 alert alert-success" role="alert">
+              <%= winningText %>
+            </div>
+          <% } %>
         </div>
       </div>
       <!-- row -->
