--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
           <a href="/tic/new" class="btn btn-success">New Game</a>
           <% if (isWin) { %>
             <div class="mt-1 alert alert-success" role="alert">
-              <%= winningText %>
+              <strong><%= winner %></strong> has won
             </div>
           <% } %>
         </div>
